cartitem align fix

--- a/index.css
+++ b/index.css
@@ -1103,8 +1103,10 @@ html {
 }
 
 .cart-item {
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  column-gap: 10px;
+  grid-template-columns: 60% 20% 20%;
+  justify-content: center;
   align-items: center;
   margin-bottom: 10px;
 }
